re-import of all files following Endeavor cruise

--- a/etc/apache2/sites-available/OpenVDMv2.conf
+++ b/etc/apache2/sites-available/OpenVDMv2.conf
@@ -6,8 +6,8 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	ServerName T7500
-	ServerAlias capablesolutions.dyndns.org
+	ServerName < Machine Name >
+	ServerAlias < Machine DNS Name >
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html/
@@ -27,35 +27,44 @@
 	# following line enables the CGI configuration for this host only
 	# after it has been globally disabled with "a2disconf".
 	#Include conf-available/serve-cgi-bin.conf
+    
+    WSGIScriptAlias /mapproxy /usr/share/mapproxy/config.py
 
-        <Directory "/var/www/html/OpenVDMv2/">
-          AllowOverride All
-        </Directory>
+	<Directory /usr/share/mapproxy/>
+	  Order deny,allow
+	  Allow from all
+	</Directory>
 
-        Alias /CruiseData/ /mnt/vault/FTPRoot/CruiseData/
-        <Directory "/mnt/vault/FTPRoot/CruiseData">
-          AllowOverride None
-          Options -Indexes +FollowSymLinks +MultiViews
-          Order allow,deny
-          Allow from all
-          Require all granted
-          #<IfModule mod_autoindex.c>
-            # SET INDEX OPTIONS
-            #IndexOptions IgnoreCase FancyIndexing FoldersFirst NameWidth=* DescriptionWidth=* SuppressHTMLPreamble
+    <Directory "/var/www/html/OpenVDMv2/">
+        AllowOverride All
+    </Directory>
 
-            # Prevent the "parent directory link"
-            #IndexIgnore ..
+    Alias /CruiseData/ /mnt/vault/FTPRoot/CruiseData/
+    <Directory "/mnt/vault/FTPRoot/CruiseData">
+        AllowOverride None
+        Options +Indexes +FollowSymLinks +MultiViews
+        Order allow,deny
+        Allow from all
+        Require all granted
+    </Directory>
 
-            # SET INDEX ORDER
-            #IndexOrderDefault Ascending Name
+    Alias /PublicData/ /mnt/vault/FTPRoot/PublicData/
+    <Directory "/mnt/vault/FTPRoot/PublicData">
+        AllowOverride None
+        Options +Indexes +FollowSymLinks +MultiViews
+        Order allow,deny
+        Allow from all
+        Require all granted
+    </Directory>
 
-            #SPECIFY HEADER FILE
-            #HeaderName /OpenVDM/header.html
-
-            #SPECIFY FOOTER FILE
-            #ReadmeName /OpenVDM/footer.html
-          #</IfModule>
-        </Directory>
+    Alias /VisitorInformation/ /mnt/vault/FTPRoot/VisitorInformation/
+    <Directory "/mnt/vault/FTPRoot/VisitorInformation">
+        AllowOverride None
+        Options +Indexes +FollowSymLinks +MultiViews
+        Order allow,deny
+        Allow from all
+        Require all granted
+    </Directory>
 
 </VirtualHost>
 
