modifications to simplify installation procedures

--- a/etc/supervisor/conf.d/OVDM_scheduler.conf
+++ b/etc/supervisor/conf.d/OVDM_scheduler.conf
@@ -1,5 +1,5 @@
 [program:OVDM_scheduler]
-command=/usr/bin/python /usr/local/bin/OVDM_scheduler.py --interval 5 http://capablesolutions.dyndns.org:8180/OpenVDMv2/
+command=/usr/bin/python /usr/local/bin/OVDM_scheduler.py --interval 5 http://127.0.0.1/OpenVDMv2/
 process_name=Worker_%(process_num)s
 numprocs=1
 redirect_stderr=true
