Fixed multiple issues
- Fixed bug with Local Transfers
- Fixed issue with GIS objects in dataDashboard not using MapProxy
- Fixed issue with dynamic destination directories not properly being
processed by transferSummary and md5Summary processes
- Fixed issue with geotiff dashboardData script sending erroneous text
to stdout

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /var/www/OpenVDMv2/.htaccess
 /var/www/OpenVDMv2/errorlog.html
 /var/www/OpenVDMv2/app/Core/Config.php
+var/www/OpenVDMv2/errorlog.html
