--- a/usr/local/etc/openvdm/openvdm.yaml.dist
+++ b/usr/local/etc/openvdm/openvdm.yaml.dist
@@ -1,6 +1,6 @@
 # ----------------------------------------------------------------------------------- #
 #
-#         FILE:  openvdm.cfg
+#         FILE:  openvdm.yaml
 #
 #  DESCRIPTION:  OpenVDM configuration file, YAML format
 #
@@ -8,9 +8,9 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  2.0
+#      VERSION:  2.1rc
 #      CREATED:  2016-02-02
-#     REVISION:  2016-02-05
+#     REVISION:  2016-03-07
 #
 # LICENSE INFO: Open Vessel Data Management (OpenVDM) Copyright (C) 2016  Webb Pinner
 #
@@ -30,7 +30,7 @@
 # ----------------------------------------------------------------------------------- #
 
 # The siteRoot for the OpenVDM web-application/API
-siteRoot: "http://localhost/OpenVDMv2/"
+siteRoot: "http://capablesolutions.dyndns.org:8180/OpenVDMv2/"
 
 # The transferInterval defines the interval for performing collectionSystemTransfer.
 # The unit is in minutes.
