--- a/usr/local/etc/openvdm/postCollectionSystemTransfer.yaml.dist
+++ b/usr/local/etc/openvdm/postCollectionSystemTransfer.yaml.dist
@@ -32,7 +32,7 @@
 # SAMPLE BLOCK --- INDENTS ARE IMPORTANT TO THE YAML-FORMAT ---
 #- collectionSystemTransferName: SCS
 #  commandList:
-#  - name: buildCruiseTracks
+#  - name: r2rNavManager
 #    command:
 #    - python
 #    - /usr/local/bin/r2rNavManager.py
@@ -65,11 +65,3 @@
 # - '{collectionSystemTransferName}' --> the name of the collectionSystemTransfer that just occurred 
 # - '{newFiles}' --> JSON-formatted array of all new files that were just transferred
 # - '{updatedFile}' --> JSON-formatted array of all updated files that were just transferred
-
-- collectionSystemTransferName: SCS
-  commandList:
-  - name: r2rNavManager
-    command:
-    - python
-    - /usr/local/bin/r2rNavManager.py
-    - SCS
