--- a/etc/supervisor/conf.d/OVDM_scheduler.conf
+++ b/etc/supervisor/conf.d/OVDM_scheduler.conf
@@ -7,5 +7,5 @@ stdout_logfile=/var/log/OpenVDM/OVDM_scheduler_STDOUT.log
 stderr_logfile=/var/log/OpenVDM/OVDM_scheduler_STDERR.log
 user=root
 autostart=true
-autorestart=false
+autorestart=true
 stopsignal=QUIT
