various bug fixes

--- a/var/www/OpenVDMv2/app/Core/Config.php.dist
+++ b/var/www/OpenVDMv2/app/Core/Config.php.dist
@@ -105,7 +105,7 @@ class Config
         /*
          * Optional create a constant for the name of the site.
          */
-        define('SITETITLE', 'Open Vessel Data Management v2.1');
+        define('SITETITLE', 'Open Vessel Data Management v2.2b');
 
         /*
          * Optionall set a site email address.
