--- a/usr/local/etc/openvdm/datadashboard.yaml.dist
+++ b/usr/local/etc/openvdm/datadashboard.yaml.dist
@@ -8,11 +8,12 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  2.1rc
+#      VERSION:  2.2
 #      CREATED:  2016-03-04
-#     REVISION:  2016-03-07
+#     REVISION:  2016-10-30
 #
-# LICENSE INFO: Open Vessel Data Management (OpenVDM) Copyright (C) 2016  Webb Pinner
+# LICENSE INFO: Open Vessel Data Management (OpenVDMv2)
+#               Copyright (C) OceanDataRat.org 2016
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -127,7 +128,7 @@
     id: map
     heading: Position
     dataArray:
-    - dataType: gga
+    - dataType: gga-posmv
       visType: geoJSON
     - dataType: geotiff
       visType: tms
