--- a/usr/local/etc/openvdm/postDataDashboard.yaml.dist
+++ b/usr/local/etc/openvdm/postDataDashboard.yaml.dist
@@ -8,11 +8,12 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  2.1rc
-#      CREATED:  2016-03-07
+#      VERSION:  2.2
+#      CREATED:  2016-10-30
 #     REVISION:
 #
-# LICENSE INFO: Open Vessel Data Management (OpenVDM) Copyright (C) 2016  Webb Pinner
+# LICENSE INFO: Open Vessel Data Management (OpenVDMv2)
+#               Copyright (C) OceanDataRat.org 2016
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -65,3 +66,11 @@
 # - '{collectionSystemTransferName}' --> the collectionSystemTransferName used for the dataDashboard that just occurred 
 # - '{newFiles}' --> JSON-formatted array of all new files that were just transferred in the cooresponding collectionSystemTransfer
 # - '{updatedFile}' --> JSON-formatted array of all updated files that were just transferred in the cooresponding collectionSystemTransfer
+
+#- collectionSystemTransferName: SCS
+#  commandList:
+#  - name: buildCruiseTracks
+#    command:
+#    - python
+#    - /usr/local/bin/buildCruiseTracks.py
+#    - SCS
