--- a/etc/samba/smb.conf.dist
+++ b/etc/samba/smb.conf.dist
@@ -268,7 +268,7 @@
   write list = survey
   create mask = 0644
   directory mask = 0755
-  veto files = /._*/.DS_Store/
+  veto files = /._*/.DS_Store/.Trashes/.Spotlight-V100/
   delete veto files = yes
   hide unreadable = yes 
 
@@ -282,7 +282,7 @@
   write list = survey
   create mask = 0644
   directory mask = 0755
-  veto files = /._*/.DS_Store/
+  veto files = /._*/.DS_Store/.Trashes/.Spotlight-V100/
   delete veto files = yes
 
 [PublicData]
@@ -294,7 +294,7 @@
   writable = yes
   create mask = 0000
   directory mask = 0000
-  veto files = /._*/.DS_Store/
+  veto files = /._*/.DS_Store/.Trashes/.Spotlight-V100/
   delete veto files = yes
   force create mode = 666
   force directory mode = 777
