Opps, didn't commit any file updates in the last push

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,5 @@
 /usr/local/etc/openvdm/datadashboard.yaml
 /usr/local/etc/openvdm/openvdm.yaml
 /usr/local/bin/openvdm.pyc
-/usr/local/bin/OVDM_dashboardDataScripts/EM302_dataDashboard.py
-/usr/local/bin/OVDM_dashboardDataScripts/SCS_dataDashboard.py
+/usr/local/bin/OVDM_dashboardDataScripts/*.py
 composer.lock
