--- a/var/www/OpenVDMv2/app/Core/Config.php.dist
+++ b/var/www/OpenVDMv2/app/Core/Config.php.dist
@@ -50,6 +50,18 @@ class Config
         define('DASHBOARD_CONF', '/usr/local/etc/openvdm/datadashboard.yaml');
 
         /*
+         * Whether or not to hide all directories in the CruiseData directory other than the
+         * current cruise. (Yes|No))
+         */
+        define('SHOW_LOWERING_COMPONENTS', 'No');
+
+        /*
+         * Directory within cruise directory to store vehicle data. (i.e. 'Vehicle')
+         */
+        define('LOWERINGDATA_BASEDIR', 'Vehicle');
+
+
+        /*
          * Set default controller and method for legacy calls.
          */
         define('DEFAULT_CONTROLLER', 'welcome');
@@ -105,7 +117,7 @@ class Config
         /*
          * Optional create a constant for the name of the site.
          */
-        define('SITETITLE', 'Open Vessel Data Management v2.2b');
+        define('SITETITLE', 'Open Vessel Data Management v2.3b');
 
         /*
          * Optionall set a site email address.
