Multiple bug fixes and improvements based on feedback from R/V Falkor
 - Fixed performance issues caused by 'du' system calls to remote volumes with thousands of files
 - Complete overhaul of error messages for improved readability and troubleshooting information
 - Exporting cruise and lowering configurations via the main tab on the configuration window now returns a success/failure modal
 - CruiseDataTransfers have the option of specifying a maximum bandwidth
 - CruiseDataTransfers have the option to NOT include files generated by OpenVDM
 - Starting End-of-Cruise and End-of-Lowering tasks disables the button to prevent re-clicks and changes the button's text to clarify that the task is still running.

--- a/usr/local/etc/openvdm/datadashboard.yaml.dist
+++ b/usr/local/etc/openvdm/datadashboard.yaml.dist
@@ -10,7 +10,7 @@
 #      COMPANY:  Capable Solutions
 #      VERSION:  2.3
 #      CREATED:  2016-03-04
-#     REVISION:  2017-05-08
+#     REVISION:  2016-09-08
 #
 # LICENSE INFO: Open Vessel Data Management (OpenVDMv2)
 #               Copyright (C) OceanDataRat.org 2017
@@ -114,6 +114,52 @@
 #      visType: tms
 #
 
+- title: Vehicle
+  page: vehicle
+  view: default
+  cssArray:
+  - leaflet
+  jsArray:
+  - dataDashboardDefault
+  - highcharts
+  - leaflet
+  - lowering
+  placeholderArray:
+  - plotType: map
+    id: map
+    heading: Position
+    dataArray:
+    - dataType: rov-gga
+      visType: geoJSON
+    - dataType: rov-pauv
+      visType: geoJSON
+    - dataType: geotiff
+      visType: tms
+  - plotType: chart
+    id: hdt
+    heading: Heading
+    dataArray:
+    - dataType: rov-hdt
+      visType: json
+  - plotType: chart
+    id: dpt
+    heading: Depth
+    dataArray:
+    - dataType: rov-dpt
+      visType: json
+  - plotType: chart
+    id: vtg
+    heading: SOG/COG
+    dataArray:
+    - dataType: rov-vtg
+      visType: json
+  - plotType: chart
+    id: hpr
+    heading: Heading/Pitch/Roll
+    dataArray:
+    - dataType: rov-hpr
+      visType: json
+
 - title: Position
   page: position
   view: default
@@ -123,6 +169,7 @@
   - dataDashboardDefault
   - highcharts
   - leaflet
+  - lowering
   placeholderArray:
   - plotType: map
     id: map
@@ -132,6 +179,23 @@
       visType: geoJSON
     - dataType: geotiff
       visType: tms
+
+#- title: Interactive
+#  page: lowering
+#  view: lowering
+#  cssArray:
+#  - leaflet
+#  jsArray:
+#  - highcharts
+#  - leaflet
+#  - lowering
+#  placeholderArray:
+#  - plotType: map
+#    id: map
+#    heading: Position
+#    dataArray:
+#    - dataType: rov-pauv
+#      visType: geoJSON
 
 - title: Weather
   page: weather
