--- a/usr/local/etc/openvdm/openvdm.yaml.dist
+++ b/usr/local/etc/openvdm/openvdm.yaml.dist
@@ -8,12 +8,12 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  2.3
+#      VERSION:  2.2
 #      CREATED:  2016-02-02
-#     REVISION:  2017-08-05
+#     REVISION:  2017-05-01
 #
 # LICENSE INFO: Open Vessel Data Management (OpenVDMv2)
-#               Copyright (C) OceanDataRat.org 2017
+#               Copyright (C) OceanDataRat.org 2016
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -45,6 +45,9 @@ gearmanServer: "localhost:4730"
 # current cruise. (Yes|No))
 showOnlyCurrentCruiseDir: No
 
+# Whether or not to hide all vehicle-related components (Yes|No))
+showVehicleComponents: No
+
 # The dashboardData section defines where the dashboardData processing scripts reside
 # and the expected suffix for each processing file.  It should include 2 directives:
 # processingScriptDir --> the full path containing the dashboardData processing scripts
@@ -70,7 +73,7 @@ hooks:
         - updateMD5Summary
 #        - postDataDashboard
 #    setupNewCruise:
-#        -postSetupNewCruise
+#        - postSetupNewCruise
 #    setupNewLowering:
-#        -postSetupNewLowering
+#        - postSetupNewLowering
 #    finalizeCurrentCruise:
