--- a/usr/local/etc/openvdm/openvdm.yaml.dist
+++ b/usr/local/etc/openvdm/openvdm.yaml.dist
@@ -8,12 +8,12 @@
 #        NOTES:
 #       AUTHOR:  Webb Pinner
 #      COMPANY:  Capable Solutions
-#      VERSION:  2.2
+#      VERSION:  2.3
 #      CREATED:  2016-02-02
-#     REVISION:  2017-05-01
+#     REVISION:  2017-10-05
 #
-# LICENSE INFO: Open Vessel Data Management (OpenVDMv2)
-#               Copyright (C) OceanDataRat.org 2016
+# LICENSE INFO: Open Vessel Data Management v2.3 (OpenVDMv2)
+#               Copyright (C) OceanDataRat.org 2017
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -44,9 +44,6 @@ gearmanServer: "localhost:4730"
 # Whether or not to hide all directories in the CruiseData directory other than the
 # current cruise. (Yes|No))
 showOnlyCurrentCruiseDir: No
-
-# Whether or not to hide all vehicle-related components (Yes|No))
-showVehicleComponents: No
 
 # The dashboardData section defines where the dashboardData processing scripts reside
 # and the expected suffix for each processing file.  It should include 2 directives:
