--- a/usr/local/etc/openvdm/postCollectionSystemTransfer.yaml.dist
+++ b/usr/local/etc/openvdm/postCollectionSystemTransfer.yaml.dist
@@ -10,9 +10,9 @@
 #      COMPANY:  Capable Solutions
 #      VERSION:  2.3
 #      CREATED:  2016-03-07
-#     REVISION:  2017-08-05
+#     REVISION:  2017-10-05
 #
-# LICENSE INFO: Open Vessel Data Management (OpenVDMv2)
+# LICENSE INFO: Open Vessel Data Management v2.3 (OpenVDMv2)
 #               Copyright (C) OceanDataRat.org 2017
 #
 #    This program is free software: you can redistribute it and/or modify
