Added field to Config.php.dist for naming the lowering to something else (i.e. 'Dive', 'Deployment', 'Cast', etc)

--- a/var/www/OpenVDMv2/app/Core/Config.php.dist
+++ b/var/www/OpenVDMv2/app/Core/Config.php.dist
@@ -55,6 +55,11 @@ class Config
         define('LOWERINGDATA_BASEDIR', 'Vehicle');
 
         /*
+         * Define what to call the lowering. (i.e. 'Lowering', 'Dive', 'Deployment')
+         */
+        define('LOWERING_NAME', 'Lowering');
+
+        /*
          * Set default controller and method for legacy calls.
          */
         define('DEFAULT_CONTROLLER', 'welcome');
