Fixed Collection System, Updated postCollectionSystemTransfer - The add/edit Collection System transfer forms now auto remove any leading '/' characters from the destination directory field.  before if a leading '/' was included the transfer would to interpret this as an absolute path instead as a relative path - Added an additional comment to the postCollectionSystemTransfer.yaml.dist file to specify that wildcards must be in quotes (') - Added additional debug messaging to OVDM_postCollectionSystemTransfer.py worker

--- a/usr/local/etc/openvdm/postCollectionSystemTransfer.yaml.dist
+++ b/usr/local/etc/openvdm/postCollectionSystemTransfer.yaml.dist
@@ -66,3 +66,5 @@
 # - '{collectionSystemTransferName}' --> the name of the collectionSystemTransfer that just occurred 
 # - '{newFiles}' --> JSON-formatted array of all new files that were just transferred
 # - '{updatedFile}' --> JSON-formatted array of all updated files that were just transferred
+#
+# **** NOTE: Wild cards must be in quotes (') or will not work ****
